Added jobs management in admin panel and simple authentication system

--- a/test/fixtures/job_types.yml
+++ b/test/fixtures/job_types.yml
@@ -1,7 +1,7 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
+full-time:
+  name: Full-time
+  value: fulltime
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+part-time:
+  name: Part-time
+  value: parttime
